button spacing inconsistency fix

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1314,7 +1314,7 @@ textarea {
             color: @font-swatch7-color;
             letter-spacing: inherit;
             padding: 5px 10px;
-            margin: 1em 0 0 3px;
+            margin: 1em 0;
             text-decoration: none;
             position: relative;
             width: 85px;
